@@ -1,6 +1,7 @@
 Revision history for Spreadsheet-HTML
 
 0.37
+    - able to pass some custom args along to Handsontable JS
     - presets check for wantarray (client can get table w/out js)
 
 0.36
